rustdocs/errors/rust-bitcoin-internals-src-error-input_string.rs.txt
error[E0432]: unresolved import `core`
 --> ../rust-bitcoin/internals/src/error/input_string.rs:3:5
  |
3 | use core::fmt;
  |     ^^^^
  |     |
  |     you might be missing crate `core`
  |     help: try using `std` instead of `core`: `std`

error[E0432]: unresolved import `core`
   --> ../rust-bitcoin/internals/src/error/input_string.rs:117:9
    |
117 |     use core::fmt;
    |         ^^^^
    |         |
    |         you might be missing crate `core`
    |         help: try using `std` instead of `core`: `std`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0432`.
